--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,35 +223,35 @@ main h2 {
   }
 
   .feature-1 {
-    background-image: url(/assets/img/jonas-junk-54d38tjO7EU-unsplash.jpg);
+    background-image: url(https://images.unsplash.com/photo-1636012474705-b91610743811?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   }
 
   .feature-1:hover {
-    background-image: url(/assets/img/jan-kopriva-b6fns2kOFsk-unsplash.jpg);
+    background-image: url(https://images.unsplash.com/photo-1613033686399-aa7c18d6d760?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   }
 
   .feature-2 {
-    background-image: url(/assets/img/jonas-junk-54d38tjO7EU-unsplash.jpg);
+    background-image: url(https://images.unsplash.com/photo-1449965408869-eaa3f722e40d?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   }
 
   .feature-2:hover {
-    background-image: url(/assets/img/jan-kopriva-b6fns2kOFsk-unsplash.jpg);
+    background-image: url(https://images.unsplash.com/photo-1534275404437-24c015d1a3e4?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   }
 
   .feature-3 {
-    background-image: url(/assets/img/jonas-junk-54d38tjO7EU-unsplash.jpg);
+    background-image: url(https://images.unsplash.com/photo-1519557489688-c30c74763166?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   }
 
   .feature-3:hover {
-    background-image: url(/assets/img/jan-kopriva-b6fns2kOFsk-unsplash.jpg);
+    background-image: url(https://images.unsplash.com/photo-1564415051543-cb73a7468103?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   }
 
   .feature-4 {
-    background-image: url(/assets/img/jonas-junk-54d38tjO7EU-unsplash.jpg);
+    background-image: url(https://images.unsplash.com/photo-1485575301924-6891ef935dcd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   }
 
   .feature-4:hover {
-    background-image: url(/assets/img/jan-kopriva-b6fns2kOFsk-unsplash.jpg);
+    background-image: url(https://images.unsplash.com/photo-1562618817-253b06cf2b6e?q=80&w=2944&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   }
 
   .features p {
